# mtplz

./: .gitignore  BUILDING  CMakeLists.txt  Jamroot  README  compile_commands.json  moses2mtplz.perl
ProbingPT/: Jamfile  OutputFileStream.cpp  OutputFileStream.h  StoreTarget.cpp  StoreTarget.h  hash.cpp  hash.hh  line_splitter.cpp  line_splitter.hh  probing_hash_utils.cpp  probing_hash_utils.hh  querying.cpp  querying.hh  storing.cpp  storing.hh  vocabid.cpp  vocabid.hh
alone/: vocab.hh
decode/: CMakeLists.txt  Jamfile  LOG  chart.cc  chart.hh  chart_test.cc  context.hh  coverage.cc  coverage.hh  coverage_test.cc  decode_main.cc  distortion.cc  distortion.hh  feature.hh  feature_init.cc  feature_init.hh  filter.cc  filter.hh  filter_test.cc  future.cc  future.hh  hypothesis.cc  hypothesis.hh  hypothesis_builder.cc  hypothesis_builder.hh  id.hh  lexro.cc  lexro.hh  lexro_test.cc  lm.cc  lm.hh  objective.cc  objective.hh  output.cc  output.hh  passthrough.hh  phrase.cc  phrase.hh  phrase_count_feature.hh  phrase_table.cc  (+21 more)
example/: make_pt.sh  test.arpa  test.gdb  test.phrase_table  test.sh  test.source_text  test.weights  test2.phrase_table  test2.sh  test2.source_text
lm/: Jamfile  vocab.cc  vocab.hh
lm/builder/: corpus_count.cc
lm/interpolate/: merge_vocab.cc
mtplz/: .cproject  .project
paper/: acl2014.tex  paper.bib
paper/plot/: bleu.tex  model.tex  moses_probing  (+5 more)
phrase/: CMakeLists.txt  access.cc  access.hh  format.cc  format.hh  record_writer.hh  source_map.hh  types.hh
phrase_table/: Jamfile  filter.cc  filter.hh  filter_test.cc  id.hh  phrase_table.cc  phrase_table.hh  phrase_table_test.cc  scorer.cc  scorer.hh  test.filter_text  test.phrase_table  vocab.cc  vocab.hh
pt/: CMakeLists.txt  access.cc  access.hh  access_test.cc  binarize_phrase_table_main.cc  create.cc  create.hh  format.cc  format.hh  hash.hh  hash_table_region.hh  phrase_table_test.cc  query.cc  query.hh  record_writer.hh  source_map.hh  statistics.hh  types.hh  word_array.hh
scripts/: binarize_phrase_reordering.sh
search/: CMakeLists.txt  applied.hh  edge_generator.cc  edge_generator.hh  header.hh  nbest.cc  nbest.hh  types.hh  vertex.cc  vertex.hh
util/: CMakeLists.txt  Jamfile  file_piece.cc  file_piece.hh  fixed_array.hh  layout.hh  layout_test.cc  mmap.hh  mutable_vocab.cc  mutable_vocab.hh  mutable_vocab_test.cc  object_pool.hh  pool.cc  pool.hh  probing_hash_table.hh  scoped.hh  tokenize_piece.hh  usage.cc
